RESOLVED FIXED207691
[GStreamer][EME] Fix warnings in LOG_DISABLED build
https://bugs.webkit.org/show_bug.cgi?id=207691
Summary [GStreamer][EME] Fix warnings in LOG_DISABLED build
Charlie Turner
Reported 2020-02-13 05:34:43 PST
[GStreamer][EME] Fix warnings in LOG_DISABLED build
Attachments
Patch (3.03 KB, patch)
2020-02-13 05:36 PST, Charlie Turner
no flags
Patch (3.02 KB, patch)
2020-02-14 07:15 PST, Charlie Turner
no flags
Charlie Turner
Comment 1 2020-02-13 05:36:31 PST
Created attachment 390634 [details] Patch Fix warnings with LOG_DISABLED. It would be nice if the LOG macro could arrange for VA_ARGS to be UNUSED_VARIABLES when LOG_DISABLED, but I do not know how to achieve this with preprocessor macros
WebKit Commit Bot
Comment 2 2020-02-13 08:54:50 PST
Comment on attachment 390634 [details] Patch Rejecting attachment 390634 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 390634, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output: https://webkit-queues.webkit.org/results/13322090
Charlie Turner
Comment 3 2020-02-14 07:15:37 PST
WebKit Commit Bot
Comment 4 2020-02-14 10:05:08 PST
Comment on attachment 390762 [details] Patch Clearing flags on attachment: 390762 Committed r256620: <https://trac.webkit.org/changeset/256620>
WebKit Commit Bot
Comment 5 2020-02-14 10:05:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.