[GStreamer][EME] Fix warnings in LOG_DISABLED build https://bugs.webkit.org/show_bug.cgi?id=207691

Unreviewed build fix.


* platform/graphics/gstreamer/eme/CDMProxyClearKey.cpp: It would
be nice if the LOG macros could arrange for the VA_ARGS to be
UNUSED_VARIABLE's. Not sure if that is possible, so be ugly with
the ifdef's instead.
(WebCore::CDMProxyClearKey::cencSetCounterVector):
(WebCore::CDMProxyClearKey::cencSetDecryptionKey):
(WebCore::CDMProxyClearKey::cencDecryptFullSample):


Canonical link: https://commits.webkit.org/220725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256620 268f45cc-cd09-0410-ab3c-d52691b4dbfc